line spacing overlaps a bit on mobile h2, seeing if this fixes

--- a/page.css
+++ b/page.css
@@ -138,6 +138,7 @@ th, td {
 
 	h2 {
 		font-size: 1.7rem;
+		line-height: 1.9rem;
 	}
 
 	h3 {
